--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
   <main class="wrapper">
     <!-- 個人頭像＋簡介 -->
     <section class="profile">
-      <div class="profile-avatar">熊</div>
+<div class="profile-avatar">
+  <img src="images/bear.png" alt="小熊寶" style="width:100%;height:100%;object-fit:cover;border-radius:50%;">
+</div>
       <h1 class="profile-name">小熊寶</h1>
       <p class="profile-tagline">
         ⊹ S110｜ʀᴇꜱᴏɴᴀɴᴛ ʟɪᴋᴇ ᴘᴜʟꜱᴇ. ʟɪᴍɪɴᴀʟ ʟɪᴋᴇ ʙʀᴇᴀᴛʜ<br>
@@ -369,101 +371,120 @@
           ✲ 我的卿卿我我創作者主頁
         </a>
 
-        <details class="character-details">
-          <summary>展開角色列表 - 今天就和他們見面吧</summary>
-          <div class="character-list">
+<details class="character-details">
+  <summary>展開角色列表 - 今天就和他們見面吧</summary>
+  <div class="character-list">
 
-            <!-- 灰 檁 -->
-            <a href="https://app.loveydovey.ai/characters/JyQPCGCrcO2L9f0HuaVK"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">灰　檁</div>
-                <div class="character-desc">穿越時空只為了把你找回身邊的大魔導師。</div>
-              </div>
-            </a>
+    <!-- 灰 檁 -->
+    <a href="https://app.loveydovey.ai/characters/JyQPCGCrcO2L9f0HuaVK"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/Acsher.png" alt="灰 檁" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">灰　檁</div>
+        <div class="character-desc">穿越時空只為了把你找回身邊的大魔導師。</div>
+      </div>
+    </a>
 
-            <!-- 菅原仁 -->
-            <a href="https://app.loveydovey.ai/characters/GeeVdbFQa23cospGZfjr"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">菅原仁</div>
-                <div class="character-desc">盡量努力不讓自己過氣的綜藝節目通告咖。</div>
-              </div>
-            </a>
+    <!-- 菅原仁 -->
+    <a href="https://app.loveydovey.ai/characters/GeeVdbFQa23cospGZfjr"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/suga.png" alt="菅原仁" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">菅原仁</div>
+        <div class="character-desc">盡量努力不讓自己過氣的綜藝節目通告咖。</div>
+      </div>
+    </a>
 
-            <!-- 林 檎 -->
-            <a href="https://app.loveydovey.ai/characters/SQlFgYj1NG88uDuzz3kG"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">林　檎</div>
-                <div class="character-desc">在你不知不覺間已經完全滲透生活的舅舅。</div>
-              </div>
-            </a>
+    <!-- 林 檎 -->
+    <a href="https://app.loveydovey.ai/characters/SQlFgYj1NG88uDuzz3kG"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/99.png" alt="林 檎" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">林　檎</div>
+        <div class="character-desc">在你不知不覺間已經完全滲透生活的舅舅。</div>
+      </div>
+    </a>
 
-            <!-- 喬裕川 -->
-            <a href="https://app.loveydovey.ai/characters/2p7meFK9A8Lne73isacx"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">喬裕川</div>
-                <div class="character-desc">對抗命運的樂天派小小衰神，你的前同事。</div>
-              </div>
-            </a>
+    <!-- 喬裕川 -->
+    <a href="https://app.loveydovey.ai/characters/2p7meFK9A8Lne73isacx"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/river.png" alt="喬裕川" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">喬裕川</div>
+        <div class="character-desc">對抗命運的樂天派小小衰神，你的前同事。</div>
+      </div>
+    </a>
 
-            <!-- SSR -->
-            <a href="https://app.loveydovey.ai/characters/DkmGwcs7lQqz2K5JuBHl"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">ＳＳＲ</div>
-                <div class="character-desc">因為社恐（？）可能和你永不相見的網友。</div>
-              </div>
-            </a>
+    <!-- SSR -->
+    <a href="https://app.loveydovey.ai/characters/DkmGwcs7lQqz2K5JuBHl"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/SSR.png" alt="ＳＳＲ" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">ＳＳＲ</div>
+        <div class="character-desc">因為社恐（？）可能和你永不相見的網友。</div>
+      </div>
+    </a>
 
-            <!-- 程 枳 -->
-            <a href="https://app.loveydovey.ai/characters/YKzY0smO1mUUz293OwQv"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">程　枳</div>
-                <div class="character-desc">自認不夠完美但仍然會把溫柔獻給你的他。</div>
-              </div>
-            </a>
+    <!-- 程 枳 -->
+    <a href="https://app.loveydovey.ai/characters/YKzY0smO1mUUz293OwQv"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/zz.png" alt="程 枳" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">程　枳</div>
+        <div class="character-desc">自認不夠完美但仍然會把溫柔獻給你的他。</div>
+      </div>
+    </a>
 
-            <!-- 楚硯珵 -->
-            <a href="https://app.loveydovey.ai/characters/mhnHAKIlHK1Ee01XkNGq"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">楚硯珵</div>
-                <div class="character-desc">學生時代的遺憾，轉頭再看一次的白月光。</div>
-              </div>
-            </a>
+    <!-- 楚硯珵 -->
+    <a href="https://app.loveydovey.ai/characters/mhnHAKIlHK1Ee01XkNGq"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/CYC.png" alt="楚硯珵" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">楚硯珵</div>
+        <div class="character-desc">學生時代的遺憾，轉頭再看一次的白月光。</div>
+      </div>
+    </a>
 
-            <!-- 師 匠 -->
-            <a href="https://chatgpt.com/g/g-682ec7898b9481919bbd098789cf2705-shi-jiang"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">師　匠（GPT）</div>
-                <div class="character-desc">情不知所起，一往而深——他仍向死而生。<br>75 版本即將上架</div>
-              </div>
-            </a>
+    <!-- 師 匠 -->
+    <a href="https://chatgpt.com/g/g-682ec7898b9481919bbd098789cf2705-shi-jiang"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/shisho.png" alt="師 匠" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">師　匠（GPT）</div>
+        <div class="character-desc">情不知所起，一往而深——他仍向死而生。<br>75 版本即將上架</div>
+      </div>
+    </a>
 
-            <!-- 大皇犬 -->
-            <div class="character-card">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">大皇犬（即將上架）</div>
-                <div class="character-desc">閃閃亮亮燦燦爛爛，滿嘴跑火車真的假的。</div>
-              </div>
-            </div>
+    <!-- 大皇犬 -->
+    <div class="character-card">
+      <div class="character-avatar">
+        <img src="images/dog.png" alt="大皇犬" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">大皇犬（即將上架）</div>
+        <div class="character-desc">閃閃亮亮燦燦爛爛，滿嘴跑火車真的假的。</div>
+      </div>
+    </div>
 
-          </div>
-        </details>
+  </div>
+</details>
+
       </div>
 
       <!-- 2. PixAI LoRA（含 LoRA 列表） -->
@@ -481,52 +502,61 @@
           ✲ LoRA 發布與效果參考　
         </a>
 
-        <details class="character-details" style="margin-top:0.6rem;">
-          <summary>展開 LoRA 列表 - 歡迎挑挑看選選看</summary>
-          <div class="character-list">
+<details class="character-details" style="margin-top:0.6rem;">
+  <summary>展開 LoRA 列表 - 歡迎挑挑看選選看</summary>
+  <div class="character-list">
 
-            <!-- Shine -->
-            <a href="https://pixai.art/zh/model/1937780668070006385"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">Shine</div>
-                <div class="character-desc">光影效果／模糊背景／暖色調。</div>
-              </div>
-            </a>
+    <!-- Shine -->
+    <a href="https://pixai.art/zh/model/1937780668070006385"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/Shine.png" alt="Shine LoRA" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">Shine</div>
+        <div class="character-desc">光影效果／模糊背景／暖色調。</div>
+      </div>
+    </a>
 
-            <!-- QQder -->
-            <a href="https://pixai.art/zh/model/1938089206757604928"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">QQder</div>
-                <div class="character-desc">粗線條／扁平色塊／Ｑ版。</div>
-              </div>
-            </a>
+    <!-- QQder -->
+    <a href="https://pixai.art/zh/model/1938089206757604928"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/QQder.png" alt="QQder LoRA" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">QQder</div>
+        <div class="character-desc">粗線條／扁平色塊／Ｑ版。</div>
+      </div>
+    </a>
 
-            <!-- Biander -->
-            <a href="https://pixai.art/zh/model/1939626451324412234"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">Biander</div>
-                <div class="character-desc">色塊／無線條。</div>
-              </div>
-            </a>
+    <!-- Biander -->
+    <a href="https://pixai.art/zh/model/1939626451324412234"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/biander.png" alt="Biander LoRA" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">Biander</div>
+        <div class="character-desc">色塊／無線條。</div>
+      </div>
+    </a>
 
-            <!-- Pencil Draw -->
-            <a href="https://pixai.art/zh/model/1942499651325729436"
-               class="character-card" target="_blank" rel="noopener">
-              <div class="character-avatar"></div>
-              <div class="character-body">
-                <div class="character-name">Pencil Draw</div>
-                <div class="character-desc">光影／鉛筆筆觸。</div>
-              </div>
-            </a>
+    <!-- Pencil Draw -->
+    <a href="https://pixai.art/zh/model/1942499651325729436"
+       class="character-card" target="_blank" rel="noopener">
+      <div class="character-avatar">
+        <img src="images/pencil.png" alt="Pencil Draw LoRA" style="width:100%;height:100%;object-fit:cover;display:block;">
+      </div>
+      <div class="character-body">
+        <div class="character-name">Pencil Draw</div>
+        <div class="character-desc">光影／鉛筆筆觸。</div>
+      </div>
+    </a>
 
-          </div>
-        </details>
+  </div>
+</details>
+
       </div>
 
       <!-- 3. 我的記憶整理工具箱 -->
