--- a/index.html
+++ b/index.html
@@ -490,12 +490,12 @@
       <div class="card-link">
         <div class="card-title">PixAI LoRA</div>
         <p class="card-desc">目前公開的 LoRA 列表。</p>
-        <a href="https://pixai.art/zh/@citruse/artworks/models"
+        <a href="https://pixai.art/zh/@dasbaerchen42/artworks/models"
            target="_blank" rel="noopener"
            class="card-link-inner">
           ✲ 我的 PixAI 個人頁面　
         </a>
-        <a href="https://www.threads.com/@sinensism/post/DQrVYT5kUIT"
+        <a href="https://www.threads.com/@dasbaerchen42/post/DQrVYT5kUIT"
            target="_blank" rel="noopener"
            class="card-link-inner">
           ✲ LoRA 發布與效果參考　
@@ -599,7 +599,7 @@
             </a>
 
             <!-- 各種記憶整理方式 -->
-            <a href="https://www.threads.com/@sinensism/post/DP_Xg3mEXLV"
+            <a href="https://www.threads.com/@dasbaerchen42/post/DP_Xg3mEXLV"
                class="character-card" target="_blank" rel="noopener">
               <div class="character-body">
                 <div class="character-name">各種記憶整理方式</div>
