--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <div class="card">
       <div class="hero">
-        <img class="avatar" src="avatar.jpg" alt="小熊寶" />
+        <img class="avatar" src="images/avatar.jpg" alt="小熊寶" />
         <div>
           <h1>小熊寶</h1>
           <div class="sub">Das Baerchen</div>
